2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info.pc.in: patch from foser@gentoo.org to use
	the paths specified at build-time in the pkgconfig file
	(Closes: #6437)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add description and acronym to the
	GDBM mime-type (Closes: #6353)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.mo as a glob for
	application/x-gettext-translation (Closes: #6351)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: patch from Arthur Taylor <art@ified.ca> to
	add magic to most tracker files, and remove a duplicate *.xm glob
	(Closes: #6372)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: remove the magic for
	application/octet-stream, it's silly (Closes: #4843)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: patch from Matthias Clasen
	<mclasen@redhat.com> to match Type1 fonts higher than Postscript files
	(Closes: #4675)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add magic for audio/ac3 (Closes: #6509)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add audio/x-ape mime-type for
	Monkey's audio (Closes: #6747)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: remove po/stamp-it on "make clean" (Closes: #6485)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: remove the wide *.dat glob from matching
	MPEG videos (Closes: #2788)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add text/x-txt2tags to the mime-type
	so that we can whitelist it (not a Postscript!) (Closes: #2001),
	lower the priority of the application/mbox magic to avoid false
	positives

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add application/mbox for the MBOX mailboxes
	(Closes: #2052)

2006-07-03  Christian Neumair  <chris@gnome-de.org>
