@@ -978,6 +978,10 @@ command to generate the output files.
     <_comment>Game Boy ROM</_comment>
     <glob pattern="*.gb"/>
   </mime-type>
+  <mime-type type="application/x-gba-rom">
+    <_comment>Game Boy Advance ROM</_comment>
+    <glob pattern="*.gba"/>
+  </mime-type>
   <mime-type type="application/x-gdbm">
     <_comment>GDBM database</_comment>
     <acronym>GDBM</acronym>
@@ -1676,6 +1680,10 @@ command to generate the output files.
     <_comment>SMS/Game Gear ROM</_comment>
     <glob pattern="*.sms"/>
     <glob pattern="*.gg"/>
+  </mime-type>
+  <mime-type type="application/x-snes-rom">
+    <_comment>Super Nintendo ROM</_comment>
+    <glob pattern="*.smc"/>
   </mime-type>
   <mime-type type="application/x-stuffit">
     <_comment>Macintosh StuffIt archive</_comment>
