@@ -1,3 +1,8 @@
+2006-07-14  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: add application/x-snes-rom and
+	application/x-gba-rom types for SNES and GBA Roms (Closes: #7511)
+
 2006-07-09  Bastien Nocera  <hadess@hadess.net>
 
 	* shared-mime-info.pc.in: patch from foser@gentoo.org to use
